	* Groups are no longer tracked by the world.
		* Instead, individuals track their interpretations of what the group is.
	* NPCs can now learn more details about others and items.
		* This information can also become out of date, leading to bad decision making.
	* Mouse look
		* The mouse can now be used to select items in look mode (`l`).
	* NPCs now make sure their LOS is clear before opening fire.
	* Weapons now have multiple firing modes (using `f`).
	* Group leaders can now issue attack orders (hit `tab`)
	* Added movie mode (recording) (hit `?` to start, again to quit.)
	* ALife take more factors into consideration when deciding if they are safe.
	* Worlds are initially seeded with one group of a random motive.
	* Added Night Terrors.
	* Revamped recoil.
		* Recoil now depends on the type of ammo used.
	* Added the MP5, a mid-range submachine gun. Takes 9x19mm ammo.
	* Fast-forward is no longer enabled when the player performs an action.
	* A cache now exists for deleted items that are still referenced by ALife.
		* This is untested on longer playthroughs.
	* Updated map generation.
		* Maps can now be as large as 600x600 and contain multiple larger towns/cities.
	* Experimental optimizations in ALife think rate.
	* Slicing/zoning-related speed-ups.
	* New map format that no longer eats memory.
	* Added weather (only visual effects for now.)
	* Longer paths are now generated in segments.
	* Created "views," which allows for easier management of multiple consoles.
		* Note: Some legacy code remains and is being phased out.
	* Explosives are now more effective.
	* Certain items can now be activated (via `a`)
	* Added caching layer for faster item retrieval.
	* Rewrote lighting system.
	
	Bugfixes:
		* Forest placement no longer crashes mapgen.
		* Numerous out-of-bounds issues solved.
		* Fixed Linux-specific crash caused by a frame being drawn outside the console.

New in version 0.6:
	* ALife now use dijkstra maps to better calculate distance to targets