@@ -22,6 +22,7 @@ New in version 0.6.5:
 		* This information can also become out of date, leading to bad decision making.
 	* Mouse look
 		* The mouse can now be used to select items in look mode (`l`).
+	* Many new items.
 	* NPCs now make sure their LOS is clear before opening fire.
 	* Weapons now have multiple firing modes (using `f`).
 	* Group leaders can now issue attack orders (hit `tab`)
@@ -47,6 +48,7 @@ New in version 0.6.5:
 	* Explosives are now more effective.
 	* Certain items can now be activated (via `a`)
 	* Added caching layer for faster item retrieval.
+	* Added caching layer for faster chunk map lookups.
 	* Rewrote lighting system.
 	
 	Bugfixes:
